# openmm-onnx

./: CMakeLists.txt  README.md
.github/workflows/: CI.yml
devtools/conda-envs/: build-macos-latest.yml  build-ubuntu-latest.yml  build-windows-latest.yml
openmmapi/include/: OnnxForce.h
openmmapi/include/internal/: OnnxForceImpl.h  windowsExportOnnx.h
openmmapi/src/: OnnxForce.cpp  OnnxForceImpl.cpp
python/: CMakeLists.txt  onnxplugin.i  setup.py
python/tests/: TestOnnxForce.py
serialization/include/: OnnxForceProxy.h
serialization/src/: OnnxForceProxy.cpp  OnnxSerializationProxyRegistration.cpp
serialization/tests/: CMakeLists.txt  TestSerializeOnnxForce.cpp
tests/: CMakeLists.txt  TestOnnxForce.cpp  central.onnx  createTests.py  global.onnx  inputs.onnx  periodic.onnx
